--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -8,5 +7,6 @@
 }
 
 :root {
-    font-family: "Work Sans", sans-serif;
+    font-family: "Oswald", sans-serif;
+    letter-spacing: 0.75px;
 }
