--- a/src/pages/home/components/community/index.module.scss
+++ b/src/pages/home/components/community/index.module.scss
@@ -1,22 +1,29 @@
 @use "sass:map";
 @use "../../../../variables";
 
+$screen-width-breakpoint: 750px;
+
 .community {
+    @include variables.section;
+
     .contentContainer {
         @include variables.section;
         @include variables.flex-row;
         align-items: center;
         justify-content: center;
-        gap: 1em;
+        gap: 3em;
         margin: auto;
 
         .imageSide, .textSide {
             width: 50%;
+            // border: 2px solid black;
         }
 
         .imageSide {
             img {
-                @include variables.square-element(50%);
+                @include variables.square-element(85%);
+                min-width: 150px;
+                max-width: 350px;
                 display: block;
                 margin: auto;
             }
@@ -25,13 +32,24 @@
         .textSide {
             .text {
                 h3 {
-                    @include variables.font-size("xxl");
+                    font-size: clamp(
+                        variables.font-size-val("lg"),
+                        7vw,
+                        variables.font-size-val("hero")
+                    );
                     font-weight: 600;
+                    line-height: 1.2em;
                 }
     
                 p {
-                    @include variables.font-size("base");
+                    font-size: clamp(
+                        variables.font-size-val("sm"),
+                        1.5vw,
+                        variables.font-size-val("lg")
+                    );
                     margin-top: 1em;
+                    max-width: 80%;
+                    line-height: 1.25em;
                 }
             }
 
@@ -42,8 +60,7 @@
                     button {
                         @include variables.font-size("base");
                         padding: 1em 3em;
-                        border: 2px solid map.get(variables.$colors, "discord");
-                        border-radius: 4px;
+                        border: 4px solid map.get(variables.$colors, "discord");
                         background-color: map.get(variables.$colors, "discord");
                         color: #FFF;
 
@@ -55,6 +72,34 @@
                             color: #000;
                         }
                     }
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: $screen-width-breakpoint) {
+    .community {
+        margin-top: 20em;
+
+        .contentContainer {
+            @include variables.flex-column;
+            align-items: center;
+            justify-content: center;
+
+            .textSide {
+                @include variables.flex-column;
+                align-items: center;
+
+                .text {
+                    h3, p {
+                        text-align: center;
+                        max-width: none;
+                    }
+                }
+
+                .buttonContainer {
+                    margin-top: 4em;
                 }
             }
         }
