--- a/src/pages/home/components/community/index.module.scss
+++ b/src/pages/home/components/community/index.module.scss
@@ -20,6 +20,10 @@ $screen-width-breakpoint: 750px;
         }
 
         .imageSide {
+            @include variables.flex-row;
+            align-items: center;
+            justify-content: center;
+
             img {
                 @include variables.square-element(85%);
                 min-width: 150px;
