--- a/src/index.scss
+++ b/src/index.scss
@@ -10,3 +10,10 @@
     font-family: "Oswald", sans-serif;
     letter-spacing: 0.75px;
 }
+
+html, body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+}
