--- a/src/pages/home/components/showcase/index.module.scss
+++ b/src/pages/home/components/showcase/index.module.scss
@@ -13,7 +13,7 @@ $screen-width-breakpoint: 815px;
 
         .heroContainer {
             @include variables.flex-row;
-            gap: 1em;
+            gap: 2em;
             align-items: center;
 
             .textContainer {
@@ -30,20 +30,25 @@ $screen-width-breakpoint: 815px;
                         font-weight: 600;
                         font-size: clamp(
                             variables.font-size-val("xl"),
-                            10vw,
+                            9vw,
                             10em
                         )
                     }
     
                     p {
-                        line-height: 1.2;
-                        max-width: 80%;
+                        line-height: 1.3;
+                        max-width: 95%;
+                        opacity: 0.8;
                         font-weight: 200;
                         font-size: clamp(
                             variables.font-size-val("base"),
-                            1.7vw,
+                            1.1vw,
                             variables.font-size-val("lg")
-                        )
+                        );
+
+                        strong {
+                            font-weight: bolder;
+                        }
                     }
                 }
             }
@@ -62,20 +67,21 @@ $screen-width-breakpoint: 815px;
                         )
                     );
                     display: block;
-                    margin: 0 auto;
+                    margin: 0 0 0 12.5vw;
                 }
             }
         }
 
         .buttonRow {
             @include variables.flex-row;
+            flex-wrap: wrap;
             gap: 2em;
             margin: 4em 0;
 
             .customButton {
                 @include variables.flex-row;
                 align-items: center;
-                padding: 0.8vw;
+                padding: 0.6vw 1vw;
                 border-radius: 1px;
                 transition: background-color 150ms ease-in-out;
 
@@ -126,12 +132,14 @@ $screen-width-breakpoint: 815px;
 
                 .textContainer {
                     p {
-                        max-width: none !important;
+                        margin: 1.5em auto!important;
+                        max-width: 85% !important;
                     }
                 }
             }
 
             .buttonRow {
+                margin: 1.5em 0 !important;
                 justify-content: center;
                 gap: 5vw;
 
