--- a/src/pages/home/components/games/index.module.scss
+++ b/src/pages/home/components/games/index.module.scss
@@ -46,13 +46,21 @@ $screen-width-breakpoint: 730px;
                     p {
                         margin: 0.5em 0;
                         max-width: 90%;
-                        font-weight: 400;
+                        font-weight: 200;
                     }
                 }
 
                 &:hover { 
                     cursor: pointer;
                     transform: scale(1.015);
+                }
+            }
+
+            .largeGame, .smallGame {
+                .gameTextContainer {
+                    h2, h3 {
+                        text-wrap: nowrap;
+                    }
                 }
             }
 
