--- a/src/components/sectionTitle/index.module.scss
+++ b/src/components/sectionTitle/index.module.scss
@@ -11,6 +11,7 @@
             text-align: left;
             border-bottom: 1px solid lightgray;
             padding: 0 1em 0.15em 0;
+            white-space: nowrap;
         }
     }
 }
