--- a/src/pages/home/components/Event/index.module.scss
+++ b/src/pages/home/components/Event/index.module.scss
@@ -120,10 +120,10 @@ $screen-width-breakpoint: 750px;
 
                 .text {
                     @include variables.flex-column;
-                    align-items: center;
+                    align-items: flex-start;
 
                     h3, p {
-                        text-align: center;
+                        text-align: left;
                         max-width: none !important;
                     }
 
@@ -142,11 +142,15 @@ $screen-width-breakpoint: 750px;
                         align-items: center;
                         justify-content: center;
 
-                        width: 115%;
+                        width: 90%;
                         margin-top: 1.55em;
 
                         ul {
                             text-align: left;
+
+                            li {
+                                margin: 0.4em 0;
+                            }
                         }
                     }
                 }
