Minor style changes

--- a/src/pages/home/components/credits/index.module.scss
+++ b/src/pages/home/components/credits/index.module.scss
@@ -36,6 +36,7 @@
                 @include variables.font-size("base");
                 font-weight: 250;
                 opacity: 0.5;
+                margin-left: 2px;
             }
         }
     }
